# Raytracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Hittable_List.cpp  Hittable_List.h  ImageTexture.cpp  Lambertian.h  Material.h  README.md  READMEIT.md  RenderInfo.h  Renderer.h  Sphere.h  consts.h  main.cpp  test.cpp
AccelerationMethods/: AccelerationStructure.h  ExhaustiveSearch.h  RegularGrid.h
BVH/: AABB.h  BVH.h  BoundingBox.h  Boxable.h  CanQueryForHits.h  RegularGrid.h  VertexBasedShape.h
Docs/: Scene Node.drawio
Geom/: AABB.cpp  AABB.h  Hittable.h  IntersectTestable.h  Intersection.h  Intersections.h  ONB.h  ObjectIntersection.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  Transform.h
Integrators/: BackwardIntegrator.h  BackwardIntegratorMIS.h  DebugIntegrator.h  NormalDebugIntegrator.h
Loader/: ImageTextureLoader.h  Loader.h  OBJLoader.h
Materials/: BaseMaterial.h  Dielectric.h  DiffuseLight.h  Lambertian.h  Material.h  Metal.h  PBRMaterial.h  PropsBasedObject.h  SkyMaterial.h  SolidColorMaterial.h  SolidColorTexture.h  TXTMaterial.h  Texture.h  VNMaterial.h
Mesh/: AARectMesh.h  BoxMesh.h  FlatRectMesh.h  Mesh.h  PlaneMesh.h  SphereMesh.h  TriangleMesh.h  TriangleMeshData.h
Output/: ColorBufferFormat.h  ColorBufferFormatPPM.h  FileRenderOutput.h  RenderOutput.h  WindowOutput.h
Sampler/: BackwardIntegrator.h  Integrator.h  Sampler.h  SceneSampler.h
Samplers/: ConstantSampler.h  RandomSampler.h  Sampler.h  StratifiedSampling.h
SceneGraph/: AreaLightNode.h  CameraNode.h  EmptyNode.h  Geometry.h  Hittable.h  ImportanceSamplingEnabled.h  IntersectTestable.h  IntersectionsManager.h  LightNode.h  Mesh.h  Node.h  SceneList.h  SphereLightNode.h  SphereMesh.h  Texture.h  Transform.h  TriangleMesh.h  VisualNode.h
Shaders/: HitShader.h  MaxDepthShader.h  NoHitShader.h  Shader.h  image.frag  vert.vert
Textures/: CheckerTexture.h  ImageTexture.h  Texture.h
Utils/: Buffer.h  Camera.h  ColorBufferFormat.h  ColorBufferFormatPPM.h  Consts.h  FileRenderOutput.h  PDF.h  Random.h  RenderOutput.h  Structs.h  Tile.h  Triangle.h
images/: BackwardIntegrator.ppm  Cornell.ppm  NormalDebugIntegrator.ppm
